--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "articles added by vy valid user",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js",
+    "start:dev": "nodemon server.js"
   },
   "author": "",
   "license": "ISC",
